= Ubuild Changelog

== ubuild-0.1.5 (2018-08-13)
=== Fixed
  - Fixed incorrect import.

== ubuild-0.1.4 (2018-08-13)
=== Fixed
  - Attempt to fix line ending issue on Linux.

== ubuild-0.1.3 (2018-08-13)
=== Fixed
  - Attempt to fix install issue on Linux.

== ubuild-0.1.2 (2018-08-09)
=== Added
  - Build menu header now defaults to `Ubuild`.

=== Changed
  - Can now specify function `args` and `kwargs` as normal non-keyword arguments (3 and 4) to the `menu()` decorator.

== ubuild-0.1.1 (2018-08-09)
=== Highlights
  - No functional changes, only doc and requirement updates.

== ubuild-0.1.0 (2018-08-08)
=== Highlights
  - First release.